<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.SignUpActivity"
    android:background="@color/lightblue_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shape_signup"
        android:elevation="60dp"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="32dp"
            android:text="@string/get_started"
            android:textColor="@color/blue_500"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@id/et_name_up"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_name_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@id/et_email_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="24dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@id/et_password_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_password_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@+id/container_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/spinner_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/blue_500"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/container_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />



        <LinearLayout
            android:id="@+id/container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btn_google_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_shape_google"
                android:clickable="true"
                android:paddingHorizontal="56dp"
                android:paddingVertical="16dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_shape_signup_btn"
                android:clickable="true"
                android:drawableRight="@drawable/ic_signup_arrow"
                android:drawablePadding="8dp"
                android:elevation="6dp"
                android:padding="16dp"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintBottom_toTopOf="@+id/container"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:text="@string/already_have_an_account"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:id="@+id/btn_go_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textSize="18dp"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                android:clickable="true" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signup_image"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>